--- a/backup/2.1 simulated_centered_algorithm_no_interaction.qmd
+++ b/backup/2.1 simulated_centered_algorithm_no_interaction.qmd
@@ -15,9 +15,9 @@ editor: visual
 #| message: false
 #| output: false
 
-library(dplyr) # Data manipulation
-library(ggplot2) # Data visualization
-library(ggpubr) # ggarrange
+library(dplyr)       # Data manipulation
+library(ggplot2)     # Data visualization
+library(ggpubr)      # ggarrange 
 library(fastDummies) # make dummy variables
 library(rms)
 ```
@@ -64,18 +64,8 @@ seed <- 100
 
 set.seed(seed)
 data <- data.frame(
-  x1 = sample(
-    c("x1_cat1", "x1_cat2"),
-    size = n,
-    replace = TRUE,
-    prob = c(0.5, 0.5)
-  ),
-  x2 = sample(
-    c("x2_cat1", "x2_cat2", "x2_cat3"),
-    size = n,
-    replace = TRUE,
-    prob = c(0.1, 0.4, 0.5)
-  ),
+  x1 = sample(c("x1_cat1", "x1_cat2"), size = n, replace = TRUE, prob = c(0.5, 0.5)),
+  x2 = sample(c("x2_cat1", "x2_cat2", "x2_cat3"), size = n, replace = TRUE, prob = c(0.1, 0.4, 0.5)),
   x3 = rnorm(n, mean = 100, sd = 38),
   x4 = rnorm(n, mean = 50, sd = 15),
   x5 = rnorm(n, mean = 30, sd = 5),
@@ -86,48 +76,36 @@ table(data$x1)
 table(data$x2)
 
 # dummy variables
-data <- data %>%
-  mutate(
-    x1_cat2 = ifelse(x1 == "x1_cat2", 1, 0),
-    x2_cat2 = ifelse(x2 == "x2_cat2", 1, 0),
-    x2_cat3 = ifelse(x2 == "x2_cat3", 1, 0)
-  )
+data <- data %>% mutate(
+  x1_cat2 = ifelse(x1 == "x1_cat2", 1, 0),
+  x2_cat2 = ifelse(x2 == "x2_cat2", 1, 0),
+  x2_cat3 = ifelse(x2 == "x2_cat3", 1, 0)
+)
 
 # rcs
 k_x4 <- 4
 rcs.fit <- rcs(data$x4, k_x4)
-rcs.fit_x4 <- labelled::remove_attributes(
-  rcs.fit,
-  names(attributes(rcs.fit))[3:length(names(attributes(rcs.fit)))]
-)
-colnames(rcs.fit_x4) <- paste0("x4_rcs_", 1:(k_x4 - 1))
+rcs.fit_x4 <- labelled::remove_attributes(rcs.fit, names(attributes(rcs.fit))[3:length(names(attributes(rcs.fit)))])
+colnames(rcs.fit_x4) <- paste0("x4_rcs_", 1:(k_x4-1))
 
 k_x6 <- 3
 rcs.fit <- rcs(data$x6, k_x6)
-rcs.fit_x6 <- labelled::remove_attributes(
-  rcs.fit,
-  names(attributes(rcs.fit))[3:length(names(attributes(rcs.fit)))]
-)
-colnames(rcs.fit_x6) <- paste0("x6_rcs_", 1:(k_x6 - 1))
+rcs.fit_x6 <- labelled::remove_attributes(rcs.fit, names(attributes(rcs.fit))[3:length(names(attributes(rcs.fit)))])
+colnames(rcs.fit_x6) <- paste0("x6_rcs_", 1:(k_x6-1))
 
 data <- bind_cols(data, rcs.fit_x4, rcs.fit_x6)
 
 # outcome
-data <- data %>%
-  mutate(
-    y = 100 +
-      3 * x1_cat2 +
-      2 * x2_cat2 +
-      0.5 * x2_cat3 +
-      10 * x3 +
-      25 * x4_rcs_1 +
-      18 * x4_rcs_2 +
-      21 * x4_rcs_3 -
-      6 * x5 +
-      0.6 * x6_rcs_1 +
-      1.5 * x6_rcs_2 +
-      error
-  )
+data <- data %>% mutate(
+  y = 100 + 
+    3*x1_cat2 + 
+    2*x2_cat2 + 0.5*x2_cat3 + 
+    10*x3 +
+    25*x4_rcs_1 + 18*x4_rcs_2 + 21*x4_rcs_3 -
+    6*x5 + 
+    0.6*x6_rcs_1 + 1.5*x6_rcs_2 +
+    error
+)
 
 head(data)
 
@@ -173,18 +151,12 @@ $$
 # centering
 prop.table(table(data$x1))
 (x_mean <- mean(data$x1_cat2))
-data <- data %>%
-  mutate(x1_C = x1_cat2 - x_mean)
+data <- data %>% 
+  mutate(x1_C = x1_cat2 - x_mean) 
 
 # --- linear regression model on `x1_cat2` ---
-paste0(
-  "Mean outcome if `x1_cat2 == 0`: ",
-  mean(data$y[which(data$x1_cat2 == 0)])
-)
-paste0(
-  "Mean outcome if `x1_cat2 == 1`: ",
-  mean(data$y[which(data$x1_cat2 == 1)])
-)
+paste0("Mean outcome if `x1_cat2 == 0`: ", mean(data$y[which(data$x1_cat2 == 0)]))
+paste0("Mean outcome if `x1_cat2 == 1`: ", mean(data$y[which(data$x1_cat2 == 1)]))
 fit <- lm(y ~ x1, data = data)
 coef(fit)
 sum(coef(fit)) # beta_0 + beta_1
@@ -254,26 +226,18 @@ prop.table(table(data$x2))
 # centering
 (x2_cat2_mean <- mean(data$x2_cat2))
 (x2_cat3_mean <- mean(data$x2_cat3))
-data <- data %>%
-  mutate(x2_cat2_C = x2_cat2 - x2_cat2_mean, x2_cat3_C = x2_cat3 - x2_cat3_mean)
+data <- data %>% 
+  mutate(x2_cat2_C = x2_cat2 - x2_cat2_mean,
+         x2_cat3_C = x2_cat3 - x2_cat3_mean)
 
 # --- linear regression model on `x2` ---"
-paste0(
-  "Mean outcome if `x2 == x2_cat1`: ",
-  mean(data$y[which(data$x2 == "x2_cat1")])
-)
-paste0(
-  "Mean outcome if `x2 == x2_cat2`: ",
-  mean(data$y[which(data$x2 == "x2_cat2")])
-)
-paste0(
-  "Mean outcome if `x2 == x2_cat3`: ",
-  mean(data$y[which(data$x2 == "x2_cat3")])
-)
+paste0("Mean outcome if `x2 == x2_cat1`: ", mean(data$y[which(data$x2 == "x2_cat1")]))
+paste0("Mean outcome if `x2 == x2_cat2`: ", mean(data$y[which(data$x2 == "x2_cat2")]))
+paste0("Mean outcome if `x2 == x2_cat3`: ", mean(data$y[which(data$x2 == "x2_cat3")]))
 fit <- lm(y ~ x2, data = data)
 coef(fit)
-sum(coef(fit)[c(1, 2)]) # beta_0 + beta_cat_2
-sum(coef(fit)[c(1, 3)]) # beta_0 + beta_cat_3
+sum(coef(fit)[c(1,2)]) # beta_0 + beta_cat_2
+sum(coef(fit)[c(1,3)]) # beta_0 + beta_cat_3
 
 # --- linear regression model on `x2_cat2 + x2_cat3` ---"
 # confirm that the results are the same as above
@@ -317,33 +281,21 @@ $$
 
 ```{r}
 (x_mean <- mean(data$x3))
-data <- data %>%
+data <- data %>% 
   mutate(x3_C = x3 - x_mean)
 
 # Using the centered `x3_C` (red) instead of `x3` (blue) essentially moves the data horizontally to the left by `x_mean`.
-ggplot(data, aes(x3, y)) +
-  geom_point(color = "blue", alpha = 0.1) +
+ggplot(data, aes(x3, y)) + 
+  geom_point(color = "blue", alpha = 0.1)+
   geom_hline(yintercept = mean(data$y), color = "black", linetype = "dashed") +
-  annotate(
-    "label",
-    x = max(data$x3),
-    y = mean(data$y),
-    label = "mean(data$y)",
-    size = unit(3, "pt")
-  ) +
-  geom_vline(xintercept = mean(data$x3), color = "black", linetype = "dashed") +
-  annotate(
-    "label",
-    x = mean(data$x3),
-    y = max(data$y),
-    label = "mean(data$x3)",
-    size = unit(3, "pt")
-  ) +
-  geom_vline(xintercept = 0, linetype = "dashed") +
-  geom_smooth(method = "lm", formula = "y ~ x") +
-  geom_point(aes(x3_C, y), color = "red", alpha = 0.1) +
-  geom_smooth(aes(x3_C, y), method = "lm", formula = "y ~ x", color = "red") +
-  theme_bw()
+  annotate("label", x = max(data$x3), y = mean(data$y), label = "mean(data$y)", size = unit(3, "pt")) + 
+  geom_vline(xintercept = mean(data$x3), color = "black", linetype = "dashed")+
+  annotate("label", x = mean(data$x3), y = max(data$y), label = "mean(data$x3)", size = unit(3, "pt")) +
+  geom_vline(xintercept = 0, linetype = "dashed")+
+  geom_smooth(method = "lm", formula = "y ~ x")+
+  geom_point(aes(x3_C, y), color = "red", alpha = 0.1)+
+  geom_smooth(aes(x3_C, y), method = "lm", formula = "y ~ x", color = "red")+
+  theme_bw() 
 
 paste0("Mean outcome in the dataset: ", mean(data$y))
 
@@ -389,13 +341,10 @@ In the example below, we use $k = 4$:
 # check above formula
 rcs.fit <- rcs(data$x4, k_x4)
 knots <- attributes(rcs.fit)$parms # knot locations
-res <- labelled::remove_attributes(
-  rcs.fit,
-  names(attributes(rcs.fit))[3:length(names(attributes(rcs.fit)))]
-) # don't print the attributes
+res <- labelled::remove_attributes(rcs.fit, names(attributes(rcs.fit))[3:length(names(attributes(rcs.fit)))]) # don't print the attributes
 print(head(res))
 
-source("R/util.rcs.R", echo = TRUE)
+source("R/util.rcs.R", echo = TRUE) 
 res <- get_rcs(data$x4, knots)
 print(head(res))
 ```
@@ -405,54 +354,17 @@ print(head(res))
 However, the coefficients of $y=\beta_0+\sum_{j=1}^{k-1}{\beta_{rcs_j}x_{rcs_j}}$ no longer have the explainability like the simple linear regression. **Note:** based on the knot locations, when $x_{rcs_j}=0$, $\sum_{j=1}^{k-1}{\beta_{rcs_j}x_{rcs_j}}$ is not necessarily equal to $0$, therefore $\beta_0$ doesn't represent the value of $y$ when $x_{rcs_j}=0$. Also, when $x=\overline{x}$, the predicted $y$ is not equal to $\overline{y}$, see the figure below: where the linear regression lines of `y ~ x4` and `y ~ rcs(x4,k)` are represented by black and blue, respectively.
 
 ```{r}
-ggplot(data, aes(x4, y)) +
-  geom_point(color = "blue", alpha = 0.1) +
-  geom_hline(
-    yintercept = mean(data$y),
-    color = "red",
-    linetype = "dashed",
-    linewidth = 1
-  ) +
-  annotate(
-    "label",
-    x = max(data$x4),
-    y = mean(data$y),
-    label = "mean(data$y)",
-    size = unit(3, "pt")
-  ) +
-  geom_vline(
-    xintercept = mean(data$x4),
-    color = "red",
-    linetype = "dashed",
-    linewidth = 1
-  ) +
-  annotate(
-    "label",
-    x = mean(data$x4),
-    y = max(data$y),
-    label = "mean(data$x4)",
-    size = unit(3, "pt")
-  ) +
-  geom_smooth(method = "lm", formula = y ~ x, color = "black", se = F) +
-  geom_smooth(
-    method = "lm",
-    formula = y ~ rcs(x, k_x4),
-    color = "blue",
-    se = F
-  ) +
-  geom_vline(
-    xintercept = attributes(rcs.fit)$parms,
-    color = "blue",
-    linetype = "dashed"
-  ) +
-  annotate(
-    "label",
-    x = attributes(rcs.fit)$parms,
-    y = max(data$y) * 0.9,
-    label = paste0("knot ", 1:k_x4),
-    size = unit(3, "pt")
-  ) +
-  theme_bw()
+ggplot(data, aes(x4, y)) + 
+  geom_point(color = "blue", alpha = 0.1)+
+  geom_hline(yintercept = mean(data$y), color = "red", linetype = "dashed", linewidth = 1) +
+  annotate("label", x = max(data$x4), y = mean(data$y), label = "mean(data$y)", size = unit(3, "pt")) + 
+  geom_vline(xintercept = mean(data$x4), color = "red", linetype = "dashed", linewidth = 1)+
+  annotate("label", x = mean(data$x4), y = max(data$y), label = "mean(data$x4)", size = unit(3, "pt")) +
+  geom_smooth(method = "lm", formula = y ~ x, color = "black", se = F)+
+  geom_smooth(method = "lm", formula = y ~ rcs(x,k_x4), color = "blue", se = F)+
+  geom_vline(xintercept = attributes(rcs.fit)$parms, color = "blue", linetype = "dashed")+
+  annotate("label", x = attributes(rcs.fit)$parms, y = max(data$y)*0.9, label = paste0("knot ", 1:k_x4), size = unit(3, "pt")) +
+  theme_bw() 
 ```
 
 ### Centered algorithm using *rcs*: using `x_mean`
@@ -461,37 +373,20 @@ As expected, the *rcs* of the centered `x4_C` is the *rcs* of `x4` moving horizo
 
 ```{r}
 (x_mean <- mean(data$x4))
-data <- data %>%
+data <- data %>% 
   mutate(x4_C = x4 - x_mean)
 
-ggplot(data, aes(x4, y)) +
-  geom_point(color = "blue", alpha = 0.1) +
+ggplot(data, aes(x4, y)) + 
+  geom_point(color = "blue", alpha = 0.1)+
   geom_hline(yintercept = mean(data$y), color = "black", linetype = "dashed") +
-  annotate(
-    "label",
-    x = max(data$x4),
-    y = mean(data$y),
-    label = "mean(data$y)",
-    size = unit(3, "pt")
-  ) +
-  geom_vline(xintercept = mean(data$x4), color = "black", linetype = "dashed") +
-  annotate(
-    "label",
-    x = mean(data$x4),
-    y = max(data$y),
-    label = "mean(data$x4)",
-    size = unit(3, "pt")
-  ) +
-  geom_vline(xintercept = 0, linetype = "dashed") +
-  geom_smooth(method = "lm", formula = y ~ rcs(x, k_x4)) +
-  geom_point(aes(x4_C, y), color = "red", alpha = 0.1) +
-  geom_smooth(
-    aes(x4_C, y),
-    method = "lm",
-    formula = y ~ rcs(x, k_x4),
-    color = "red"
-  ) +
-  theme_bw()
+  annotate("label", x = max(data$x4), y = mean(data$y), label = "mean(data$y)", size = unit(3, "pt")) + 
+  geom_vline(xintercept = mean(data$x4), color = "black", linetype = "dashed")+
+  annotate("label", x = mean(data$x4), y = max(data$y), label = "mean(data$x4)", size = unit(3, "pt")) +
+  geom_vline(xintercept = 0, linetype = "dashed")+
+  geom_smooth(method = "lm", formula = y ~ rcs(x,k_x4))+
+  geom_point(aes(x4_C, y), color = "red", alpha = 0.1)+
+  geom_smooth(aes(x4_C, y), method = "lm", formula = y ~ rcs(x,k_x4), color = "red")+
+  theme_bw() 
 
 rcs.fit <- rcs(data$x4, k_x4)
 # knot locations
@@ -502,33 +397,27 @@ rcs.fit.C <- rcs(data$x4_C, k_x4)
 attributes(rcs.fit.C)$parms
 attributes(rcs.fit.C)$parms + x_mean
 
-# And only the `data` column is affected,
+# And only the `data` column is affected, 
 # for other columns, the horizontal change was cancelled out.
-head(labelled::remove_attributes(
-  rcs.fit,
-  names(attributes(rcs.fit))[3:length(names(attributes(rcs.fit)))]
-)) # don't print the attributes
-head(labelled::remove_attributes(
-  rcs.fit.C,
-  names(attributes(rcs.fit.C))[3:length(names(attributes(rcs.fit.C)))]
-)) # don't print the attributes
+head(labelled::remove_attributes(rcs.fit, names(attributes(rcs.fit))[3:length(names(attributes(rcs.fit)))])) # don't print the attributes
+head(labelled::remove_attributes(rcs.fit.C, names(attributes(rcs.fit.C))[3:length(names(attributes(rcs.fit.C)))])) # don't print the attributes
 ```
 
 ```{r}
 # --- linear regression model on `rcs(x4,k_x4)` ---
-fit <- lm(y ~ rcs(x4, k_x4), data = data)
+fit <- lm(y ~ rcs(x4,k_x4), data = data)
 coef(fit)
 
 # --- linear regression model on centered variable `rcs(x4_C,k_x4)` ---
-fit.C <- lm(y ~ rcs(x4_C, k_x4), data = data)
+fit.C <- lm(y ~ rcs(x4_C,k_x4), data = data)
 coef(fit.C)
 
 # difference between the two intercepts
-coef(fit)[1] + coef(fit)[2] * x_mean
+coef(fit)[1] + coef(fit)[2]*x_mean
 
 # prediction using the centered algorithm when x = 0
 paste0("Mean outcome in the dataset: ", mean(data$y))
-predict(fit.C, newdata = data.frame(x4_C = 0))
+predict(fit.C, newdata = data.frame(x4_C=0))
 ```
 
 ### Centered algorithm using *rcs*: using an offset instead of `x_mean`
@@ -537,69 +426,40 @@ From above, it confirms that when doing a horizontal shift, all $\beta$s except 
 
 ```{r}
 # --- linear regression model on `rcs(x4,k_x4)` ---
-fit <- lm(y ~ rcs(x4, k_x4), data = data)
+fit <- lm(y ~ rcs(x4,k_x4), data = data)
 coef(fit)
-root.x4 <- root.search(fit, data, c("x4"), k_x4, mean(data$y))$x4
+root.x4 <- uniroot(fun_rcs, c(min(data$x4),max(data$x4)), object = fit, y_mean = mean(data$y), varname = "x4") #stats::uniroot
+root.x4 <- root.x4$root
 
 # the "centered" x4
-data <- data %>% mutate(x4_C1 = x4 - root.x4)
+data <- data %>% mutate(x4_C2 = x4-root.x4)
 
-ggplot(data, aes(x4, y)) +
-  geom_point(color = "blue", alpha = 0.1) +
+ggplot(data, aes(x4, y)) + 
+  geom_point(color = "blue", alpha = 0.1)+
   geom_hline(yintercept = mean(data$y), color = "black", linetype = "dashed") +
-  annotate(
-    "label",
-    x = max(data$x4),
-    y = mean(data$y),
-    label = "mean(data$y)",
-    size = unit(3, "pt")
-  ) +
-  geom_vline(xintercept = 0, linetype = "dashed") +
-  geom_smooth(method = "lm", formula = y ~ rcs(x, k_x4), se = F) +
-  geom_vline(xintercept = mean(data$x4), color = "red", linetype = "dashed") +
-  annotate(
-    "label",
-    x = mean(data$x4),
-    y = max(data$y),
-    label = "mean(data$x4)",
-    size = unit(3, "pt")
-  ) +
-  geom_point(aes(x4_C, y), color = "red", alpha = 0.1) +
-  geom_smooth(
-    aes(x4_C, y),
-    method = "lm",
-    formula = y ~ rcs(x, k_x4),
-    color = "red",
-    se = F
-  ) +
-  geom_vline(xintercept = root.x4, color = "forestgreen", linetype = "dashed") +
-  annotate(
-    "label",
-    x = root.x4,
-    y = max(data$y) * 0.9,
-    label = "root.x4",
-    size = unit(3, "pt")
-  ) +
-  geom_point(aes(x4_C1, y), color = "forestgreen", alpha = 0.1) +
-  geom_smooth(
-    aes(x4_C1, y),
-    method = "lm",
-    formula = y ~ rcs(x, k_x4),
-    color = "forestgreen",
-    se = F
-  ) +
-  theme_bw()
+  annotate("label", x = max(data$x4), y = mean(data$y), label = "mean(data$y)", size = unit(3, "pt")) + 
+  geom_vline(xintercept = 0, linetype = "dashed")+
+  geom_smooth(method = "lm", formula = y ~ rcs(x,k_x4), se = F)+
+  geom_vline(xintercept = mean(data$x4), color = "red", linetype = "dashed")+
+  annotate("label", x = mean(data$x4), y = max(data$y), label = "mean(data$x4)", size = unit(3, "pt")) +
+  geom_point(aes(x4_C, y), color = "red", alpha = 0.1)+
+  geom_smooth(aes(x4_C, y), method = "lm", formula = y ~ rcs(x,k_x4), color = "red", se = F)+
+  geom_vline(xintercept = root.x4, color = "forestgreen", linetype = "dashed")+
+  annotate("label", x = root.x4, y = max(data$y)*0.9, label = "root.x4", size = unit(3, "pt")) +
+  geom_point(aes(x4_C2, y), color = "forestgreen", alpha = 0.1)+
+  geom_smooth(aes(x4_C2, y), method = "lm", formula = y ~ rcs(x,k_x4), color = "forestgreen", se = F)+
+  theme_bw() 
 ```
 
 Note here, the intercept is not exactly equal to $\overline{y}$, but the fitted value when `x == root.x4`, *i.e.* `x-root.x4 == 0` is equal to $\overline{y}$.
 
 ```{r}
-fit.C2 <- lm(y ~ rcs(x4_C1, k_x4), data = data)
+fit.C2 <- lm(y ~ rcs(x4_C2,k_x4), data = data)
 coef(fit.C2)
 
 # prediction using the centered algorithm when x = 0
 paste0("Mean outcome in the dataset: ", mean(data$y))
-predict(fit.C2, newdata = data.frame(x4_C1 = 0))
+predict(fit.C2, newdata = data.frame(x4_C2=0))
 ```
 
 # Two predictors
@@ -640,7 +500,7 @@ I will not repeat the math here, just use below code to confirm that the interce
 
 ```{r}
 x_mean <- mean(data$x5)
-data <- data %>%
+data <- data %>% 
   mutate(x5_C = x5 - x_mean)
 
 # --- linear regression model on `x3` and `x5` ---
@@ -657,42 +517,46 @@ coef(fit)
 
 Note:
 
-1.  In order to find the root, one needs to first fit a regression using the **centered** categorical variable, and then use `root.search` to find the root.
+1.  In order to find the root, one needs to first fit a regression using the **centered** categorical variable, and then use `stats::uniroot` to find the root.
 
 2.  In the centered algorithm, after centering both variables, the intercept is not exactly $\overline{y}$, but the predicted value when all variables equal to 0 is equal to $\overline{y}$.
 
 ```{r}
 # --- linear regression model on centered categotical variables and `rcs(x4, k_x4)` ---
 fit <- lm(y ~ x2_cat2_C + x2_cat3_C + rcs(x4, k_x4), data = data)
-coef(fit)
+(coefs <- coef(fit))
 # finding the root for x4
-(root.x4 <- root.search(fit, data, c("x4"), k_x4, mean(data$y))$x4)
+rcs.fit <- rcs(data$x4, k_x4)
+root.x4 <- uniroot(fun_rcs, c(min(data$x4),max(data$x4)), object = fit, y_mean = mean(data$y), varname = "x4", knots = attributes(rcs.fit)$parms) #stats::uniroot
+root.x4 <- root.x4$root
 # the "centered" x4
-data <- data %>% mutate(x4_C2 = x4 - root.x4)
+data <- data %>% mutate(x4_C3 = x4-root.x4)
 
-# --- linear regression model on centered categotical variables and centered `rcs(x4_C2, k_x4)` ---
+# --- linear regression model on centered categotical variables and centered `rcs(x4_C3, k_x4)` ---
 paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ x2_cat2_C + x2_cat3_C + rcs(x4_C2, k_x4), data = data)
+fit <- lm(y ~ x2_cat2_C + x2_cat3_C + rcs(x4_C3, k_x4), data = data)
 coef(fit)
-predict(fit, newdata = data.frame(x2_cat2_C = 0, x2_cat3_C = 0, x4_C2 = 0))
+predict(fit, newdata = data.frame(x2_cat2_C = 0, x2_cat3_C  = 0, x4_C3 = 0))
 ```
 
 ## Centered algorithm for one *continuous* predictor without rcs and one with rcs
 
 Note:
 
-1.  In order to find the root, one needs to first fit a regression using the **centered** continuous variable (without rcs), and then use `root.search` to find the root.
+1.  In order to find the root, one needs to first fit a regression using the **centered** continuous variable (without rcs), and then use `stats::uniroot` to find the root.
 
 2.  In the centered algorithm, after centering both variables, the intercept is not exactly $\overline{y}$, but the predicted value when all variables equal to 0 is equal to $\overline{y}$.
 
 ```{r}
 # --- linear regression model on centered `x3_C` and `rcs(x4, k_x4)` ---
 fit <- lm(y ~ x3_C + rcs(x4, k_x4), data = data)
-coef(fit)
+(coefs <- coef(fit))
 # finding the root for x4
-(root.x4 <- root.search(fit, data, c("x4"), k_x4, mean(data$y))$x4)
+rcs.fit <- rcs(data$x4, k_x4)
+root.x4 <- uniroot(fun_rcs, c(min(data$x4),max(data$x4)), object = fit, y_mean = mean(data$y), varname = "x4", knots = attributes(rcs.fit)$parms) #stats::uniroot
+root.x4 <- root.x4$root
 # the "centered" x4
-data <- data %>% mutate(x4_C3 = x4 - root.x4)
+data <- data %>% mutate(x4_C3 = x4-root.x4)
 
 # --- linear regression model on centered variable `x3_C` and `rcs(x4_C3, k_x4)` ---
 paste0("Mean outcome in the dataset: ", mean(data$y))
@@ -712,107 +576,43 @@ Using plotly to visualize
 library(plotly)
 
 fig <- plot_ly(data, x = ~x4, y = ~x6, z = ~y)
-fig <- fig %>% add_markers(size = 1, opacity = 0.7)
+fig <- fig %>% add_markers(size=1, opacity = 0.7)
 
 # add the horizontal plane at z == mean(data$y)
-df_h <- data.frame(
-  x = rep(range(data$x4), 2),
-  y = rep(range(data$x6), each = 2),
-  z = mean(data$y)
-) # df for the horizontal plane
+df_h <- data.frame(x = rep(range(data$x4), 2), y = rep(range(data$x6), each = 2), z = mean(data$y)) # df for the horizontal plane
 fig <- fig %>% add_mesh(x = ~x, y = ~y, z = ~z, data = df_h, opacity = 0.3)
 
 # add the regression plane
 length.out <- 101
-fit <- lm(y ~ rcs(x4, k_x4) + rcs(x6, k_x6), data = data)
+fit <- lm(y ~ rcs(x4,k_x4) + rcs(x6,k_x6), data = data)
 df_r <- data.frame(
-  x4 = seq(min(data$x4), max(data$x4), length.out = length.out),
-  x6 = seq(min(data$x6), max(data$x6), length.out = length.out)
-)
+  x4 = seq(min(data$x4),max(data$x4),length.out=length.out),
+  x6 = seq(min(data$x6),max(data$x6),length.out=length.out))
 df_r$y <- predict(fit, newdata = df_r)
-fig <- fig %>%
-  add_trace(
-    x = ~x4,
-    y = ~x6,
-    z = ~y,
-    data = df_r,
-    size = 2,
-    type = "scatter3d",
-    mode = "markers"
-  )
+fig <- fig %>% add_trace(x = ~x4, y = ~x6, z = ~y, data = df_r, size = 2, type="scatter3d", mode = "markers")
 
 fig
 ```
 
 ```{r}
 # --- Step 1: linear regression model on `rcs(x4,k_x4)` and `rcs(x6,k_x6)` ---
-fit <- lm(y ~ rcs(x4, k_x4) + rcs(x6, k_x6), data = data)
+fit <- lm(y ~ rcs(x4,k_x4) + rcs(x6,k_x6), data = data)
 coef(fit)
 
 # --- Step 2: finding the roots ---
-# finding the root for x4
-res <- root.search(fit, data, c("x4", "x6"), c(k_x4, k_x6), mean(data$y))
+res <- root.search(model = fit, rng1 = c(min(data$x4),max(data$x4)), rng2 = c(min(data$x6),max(data$x6)), 
+  varnames = c("x4","x6"), y_mean = mean(data$y))
 
-# --- Step 3: "centering" x4 and x6 ---
-data <- data %>%
-  mutate(x4_C4 = x4 - res$x4, x6_C4 = x6 - res$x6)
+# --- Step 3: "centering" x4 ---
+data <- data %>% 
+  mutate(x4_C4 = x4 - res$x4,
+  x6_C4 = x6 - res$x6)
 
 # --- Step 3: linear regression model on centered variable `rcs(x4_C4,k_x4)` and `rcs(x6_C4,k_x6)` ---
 paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ rcs(x4_C4, k_x4) + rcs(x6_C4, k_x6), data = data)
+fit <- lm(y ~ rcs(x4_C4,k_x4) + rcs(x6_C4,k_x6), data = data)
 coef(fit)
 predict(fit, newdata = data.frame(x4_C4 = 0, x6_C4 = 0))
-```
-
-# Put everything together
-
-```{r}
-# original model
-fit <- lm(y ~ x1 + x2 + x3 + rcs(x4, k_x4) + x5 + rcs(x6, k_x6), data = data)
-coef(fit)
-
-# --- Step 1: model with centered variables without rcs, and original variable with rcs ---
-fit <- lm(
-  y ~ x1_C + x2_cat2_C + x2_cat3_C + x3_C + rcs(x4, k_x4) + x5 + rcs(x6, k_x6),
-  data = data
-)
-coef(fit)
-
-# --- Step 2: finding the roots ---
-# finding the root for x4
-res <- root.search(fit, data, c("x4", "x6"), c(k_x4, k_x6), mean(data$y))
-res
-
-# --- Step 3: "centering" x4 and x6 ---
-data <- data %>%
-  mutate(x4_C5 = x4 - res$x4, x6_C5 = x6 - res$x6)
-
-# --- Step 3: linear regression model on all centered variable ---
-paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(
-  y ~
-    x1_C +
-      x2_cat2_C +
-      x2_cat3_C +
-      x3_C +
-      rcs(x4_C5, k_x4) +
-      x5 +
-      rcs(x6_C5, k_x6),
-  data = data
-)
-coef(fit)
-predict(
-  fit,
-  newdata = data.frame(
-    x1_C = 0,
-    x2_cat2_C = 0,
-    x2_cat3_C = 0,
-    x3_C = 0,
-    x4_C5 = 0,
-    x5 = 0,
-    x6_C5 = 0
-  )
-)
 ```
 
 ```{r}
